- Added link to Google Code project page - Removed reference to current version within the code - Duplicated the header menu to the bottom of the screen
git-svn-id: http://dabr.googlecode.com/svn/trunk@5 760c5f7a-8625-11dd-9205-735403a6da14

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <ul>
   <li>In development</li>
-  <li>Open source</li>
+  <li><a href="http://code.google.com/p/dabr/">Open source</a></li>
   <li>A web interface to Twitter's API</li>
   <li>A personal project of <a href="user/davidcarrington">@davidcarrington</a></li>
   <li>More feature-complete than the Twitter mobile site</li>
