--- a/about.html
+++ b/about.html
@@ -1,20 +1,18 @@
-<p>dabr.co.uk is:</p>
+<h3>What is dabr?</h3>
 
 <ul>
-  <li>In development</li>
-  <li><a href="http://code.google.com/p/dabr/">Open source</a></li>
-  <li>A web interface to Twitter's API</li>
-  <li>A personal project of <a href="user/davidcarrington">@davidcarrington</a></li>
-  <li>More feature-complete than the Twitter mobile site</li>
-  <li>Fairly secure, storing your Twitter login details in an encrypted cookie on your machine, and never stored on the website</li>
+  <li>A mobile web interface to Twitter's API</li>
+  <li>An <a href="http://code.google.com/p/dabr/">open source</a> project by <a href="user/davidcarrington">@davidcarrington</a></li>
+  <li>Secure, storing your Twitter login details in an encrypted cookie on your machine, and <em>never</em> stored on the website</li>
 </ul>
 
-<p>Some plans for the future:</p>
+<p>If you have any comments, suggestions or questions then feel free to get in touch.</p>
+
+<h3>Alternative mobile sites</h3>
 
 <ul>
-  <li>Retweet functionality</li>
-  <li>Integration with Google Gears Mobile Location API</li>
-  <li>Optimisations for different phones and connection speeds</li>
+  <li><a href="http://m.twitter.com/">m.twitter.com</a> - the official site</li>
+  <li><a href="http://m.slandr.net/">slandr</a> - popular ad-supported site</li>
+  <li><a href="http://www.twitstat.com/m/">twitstat</a></li>
+  <li><a href="http://m.tweete.net/">tweete</a> - very lightweight HTML</li>
 </ul>
-
-<p>If you have any questions, drop me a line on Twitter.</p>
