Simplified description of other sites.
git-svn-id: http://dabr.googlecode.com/svn/trunk@44 760c5f7a-8625-11dd-9205-735403a6da14

--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+<div id="about" style="background: #eee; margin: 0.5em; padding: 0.1em 1em;">
+
 <h3>What is dabr?</h3>
 
 <ul>
@@ -12,7 +14,9 @@
 
 <ul>
   <li><a href="http://m.twitter.com/">m.twitter.com</a> - the official site</li>
-  <li><a href="http://m.slandr.net/">slandr</a> - popular ad-supported site</li>
-  <li><a href="http://www.twitstat.com/m/">twitstat</a></li>
-  <li><a href="http://m.tweete.net/">tweete</a> - very lightweight HTML</li>
+  <li><a href="http://m.slandr.net/">Slandr</a></li>
+  <li><a href="http://www.twitstat.com/m/">Twitstat</a></li>
+  <li><a href="http://m.tweete.net/">Tweete</a></li>
 </ul>
+
+</div>
