--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <ul>
   <li>A mobile web interface to Twitter's API</li>
-  <li>An <a href="http://code.google.com/p/dabr/">open source</a> project by <a href="user/davidcarrington">@davidcarrington</a></li>
+  <li>An <a href="http://code.google.com/p/dabr/">open source</a> project by <a href="user/davidcarrington">@davidcarrington</a> with inspirations from <a href="user/whatleydude">@whatleydude</a></li>
   <li>Secure, storing your Twitter login details in an encrypted cookie on your machine, and <em>never</em> stored on the website</li>
 </ul>
 
