Added dabr.nl-specific about text.

--- a/about.html
+++ b/about.html
@@ -8,11 +8,18 @@
   <li>Secure, storing your Twitter login details in an encrypted cookie on your machine, and <em>never</em> stored on the website</li>
 </ul>
 
+<h3>What is dabr.nl?</h3>
+
+<ul>
+  <li>A Dutch mirror ran bij <a href="user/berkes">@berkes</a> on <a href="http://webschuur.com" title="Drupal, Ruby on Rails en other Open Source webdevelopment">webschuur.com</a></li>
+  <li>Is tracked by <a href="http://piwik.org" title="Piwik: Open Source web analytics">PIWIK</a>. No data will ever be sold, given away or disclosed in another way, unless forced by Dutch law. No passwords or other sensitive data is tracked in PIWIK.</li>
+</ul>
+
 <p>If you have any comments, suggestions or questions then feel free to get in touch.</p>
 
 <h3>Alternative mobile sites</h3>
-
 <ul>
+  <li><a href="http://m.dabr.co.uk/">m.dabr.co.uk</a> - the original Dabr installation</li>
   <li><a href="http://m.twitter.com/">m.twitter.com</a> - the official site</li>
   <li><a href="http://m.slandr.net/">Slandr</a></li>
   <li><a href="http://www.twitstat.com/m/">Twitstat</a></li>
