--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <div id="about" style="background: #eee; margin: 0.5em; padding: 0.1em 1em;">
 
+<h3>IMPORTANT</h3>
+<p>This site is using <a href="http://code.google.com/p/dabr/source/browse/branches/yegle">yegle's branch</a> of <a href="http://code.google.com/p/dabr/">dabr project</a>.</p>
+
 <h3>What is dabr?</h3>
 
 <ul>
