re-adding changes to about: explaining what twash is, and some extra lines about tracking and how to get in contact

--- a/about.html
+++ b/about.html
@@ -1,18 +1,21 @@
 <div id="about" style="background: #eee; margin: 0.5em; padding: 0.1em 1em;">
 
-<h3>What is dabr?</h3>
+<h3>What is twa.sh?</h3>
 
 <ul>
+  <li><a href="/user/berkes">@berkes</a>' mirror of Dabr. Adapted code on <a href="http://github.com/berkes/dabr">github</a></li>
   <li>A mobile web interface to Twitter's API</li>
   <li>An <a href="http://code.google.com/p/dabr/">open source</a> project by <a href="user/davidcarrington">@davidcarrington</a> with inspirations from <a href="user/whatleydude">@whatleydude</a></li>
   <li>Secure, storing your Twitter login details in an encrypted cookie on your machine, and <em>never</em> stored on the website</li>
+  <li>Twash is monitored with my private installation of <a href="http://piwik.org">piwik</a>, for statistics. Logs, stats or other information will never be handed over or sold to anyone, unless forced by the Dutch law</li>
 </ul>
 
-<p>If you have any comments, suggestions or questions then feel free to get in touch.</p>
+<p>If you have any comments, suggestions or questions then feel free to get <a href="/user/berkes">in touch with @berkes</a>.</p>
 
 <h3>Alternative mobile sites</h3>
 
 <ul>
+  <li><a href="http://dabr.co.uk">dabr.co.uk</a> - primary dabr site</li>
   <li><a href="http://m.twitter.com/">m.twitter.com</a> - the official site</li>
   <li><a href="http://m.slandr.net/">Slandr</a></li>
   <li><a href="http://www.twitstat.com/m/">Twitstat</a></li>
